unpackaged/objects/wb_CIC_Passenger__c.object
<CustomObject>
    <description>WellBe Car Passenger Insurances</description>
    <fields>
        <fullName>CarInsurancedCar__c</fullName>
        <label>対象車</label>
        <referenceTo>wb_CarInsurancedCars__c</referenceTo>
        <relationshipLabel>搭乗保険</relationshipLabel>
        <relationshipName>CIC_Psgr_Ins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Car__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>車両</label>
        <referenceTo>wb_Vehicle__c</referenceTo>
        <relationshipLabel>搭乗保険</relationshipLabel>
        <relationshipName>Car_Psgr_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DriverSeatInsurance__c</fullName>
        <label>運転席保険</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InsuranceCurrency__c</fullName>
        <label>保険通貨</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_CancelDate__c</fullName>
        <label>（OP）解除日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OP_CommissionRate__c</fullName>
        <label>（OP）手数料率</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OP_Commission__c</fullName>
        <label>（OP）手数料</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OP_CommodityName__c</fullName>
        <label>（OP）商品名称</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_CurrentEndDate__c</fullName>
        <label>（OP）現保険終期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OP_CurrentStartDate__c</fullName>
        <label>（OP）現保険始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OP_InitialStartDate__c</fullName>
        <label>（OP）初年度始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OP_InsuranceFee__c</fullName>
        <label>（OP）保険料</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OP_Plan__c</fullName>
        <label>（OP）保険プラン</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_PolicyNumber__c</fullName>
        <label>（OP）証券番号</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OP_RemainInsuranceFee__c</fullName>
        <label>（OP）残り保険料</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OP_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>（OP）サービス</label>
        <referenceTo>wb_Service__c</referenceTo>
        <relationshipLabel>搭乗保険</relationshipLabel>
        <relationshipName>CI_OptionService</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OP_StdDriverSeatFee__c</fullName>
        <label>（OP）標準運伝席保険料</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OP_StdPassengerSeatFee__c</fullName>
        <label>（OP）標準搭乗席保険料</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PassagerSeatInsurance__c</fullName>
        <label>付保搭乗席数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Psgr_AffiliationArea__c</fullName>
        <label>（搭乗）所属地区</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psgr_CancelDate__c</fullName>
        <label>（搭乗）解約日24時</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Psgr_CancelReason__c</fullName>
        <label>（搭乗）保険解約理由</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psgr_CommissionRate__c</fullName>
        <label>（搭乗）手数料率</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Psgr_Commission__c</fullName>
        <label>（搭乗）手数料</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Psgr_CommodityName__c</fullName>
        <label>（搭乗）商品名称</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psgr_CurrentEndDate__c</fullName>
        <label>（搭乗）現保険終期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Psgr_CurrentStartDate__c</fullName>
        <label>（搭乗）現保険始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Psgr_InitialStartDate__c</fullName>
        <label>（搭乗）初年度始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Psgr_InsuranceCompany__c</fullName>
        <label>（搭乗）保険会社名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psgr_InsuranceFee__c</fullName>
        <label>（搭乗）保険料</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Psgr_InsurancePlan__c</fullName>
        <label>（搭乗）保険プラン</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psgr_PolicyNumber__c</fullName>
        <label>（搭乗）証券番号</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psgr_RemainInsuranceFee__c</fullName>
        <label>（搭乗）残り保険料</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Psgr_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>（搭乗）サービス</label>
        <referenceTo>wb_Service__c</referenceTo>
        <relationshipLabel>搭乗保険 (（搭乗）サービス)</relationshipLabel>
        <relationshipName>CI_Psgr_Ins_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Psgr_StdDriverSeatFee__c</fullName>
        <label>（搭乗）標準運転席保険料</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Psgr_StdPassengerSeatFee__c</fullName>
        <label>（搭乗）標準搭乗席保険料</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_OPBillingAmount__c</fullName>
        <formula>- ( IF (IsNull(OP_RemainInsuranceFee__c),0, OP_RemainInsuranceFee__c) - OP_InsuranceFee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（OP）保険料差分</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_PsgrBillingAmount__c</fullName>
        <formula>- ( IF (IsNull(Psgr_RemainInsuranceFee__c), 0, Psgr_RemainInsuranceFee__c) - Psgr_InsuranceFee__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（搭乗）保険料差分</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_Psgr_Effective__c</fullName>
        <formula>OR (ISNULL(Psgr_CurrentEndDate__c) =FALSE &amp;&amp; Psgr_CurrentEndDate__c &gt;= TODAY() &amp;&amp; 
OR( ISNULL(Psgr_CancelDate__c) = TRUE, Psgr_CancelDate__c &gt;=TODAY()),
ISNULL(OP_CurrentEndDate__c) =FALSE &amp;&amp; OP_CurrentEndDate__c &gt;= TODAY() &amp;&amp; 
OR( ISNULL(OP_CancelDate__c) = TRUE, OP_CancelDate__c &gt;=TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>搭乗有効</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>f_RegistryNumber__c</fullName>
        <formula>CarInsurancedCar__r.RegistryNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>登録番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_ReplacedDate__c</fullName>
        <formula>CarInsurancedCar__r.ReplacedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>異動日0時</label>
        <type>Date</type>
    </fields>
    <label>搭乗保険</label>
    <nameField>
        <label>搭乗保険番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>